# cookiecutter-marconi-storage

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: requirements.txt  setup.cfg  setup.py
{{cookiecutter.repo_name}}/tests/unit/queues/storage/: test_impl_{{cookiecutter.module_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.module_name}}/: claims.py  controllers.py  driver.py  messages.py  queues.py
