[metadata]
name = {{ cookiecutter.repo_name }}
version = 0.1
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = {{ cookiecutter.author }}
author-email = {{ cookiecutter.author_email }}
home-page = {{ cookiecutter.repo_url }}
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    {{ cookiecutter.module_name }}

[entry_points]
marconi.queues.transport =
    {{ cookiecutter.module_name }} = {{ cookiecutter.module_name }}.driver:Driver

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = {{cookiecutter.module_name}}/locale
domain = {{cookiecutter.repo_name}}

[update_catalog]
domain = {{cookiecutter.repo_name}}
output_dir = {{cookiecutter.module_name}}/locale
input_file = {{cookiecutter.module_name}}/locale/{{cookiecutter.repo_name}}.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = {{cookiecutter.module_name}}/locale/{{cookiecutter.repo_name}}.pot
